# exp_pkg

./: CMakeLists.txt  package.xml
config/: ros_configuration.yaml  target_trajectory.yaml
data/: target_trajectory.json
launch/: arena_sim.launch  napvig.launch  target_trajectory.launch  unicycle_test.launch
scripts/: target.py  target_trajectory.py
src/: trajectory_target.cpp  trajectory_target.h  trajectory_target_node.cpp  trajectory_target_node.h
